--- a/package.json
+++ b/package.json
@@ -3,5 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Anton Semenov <anta.semenov@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "deploy": "./sls-deploy.sh"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.3",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/node": "^10.0.4",
+    "aws-sdk": "^2.233.1",
+    "serverless": "^1.27.1",
+    "serverless-webpack": "^5.1.5",
+    "ts-loader": "^4.2.0",
+    "ts-node": "^6.0.2",
+    "tslint": "^5.10.0",
+    "tslint-eslint-rules": "^5.1.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.7.0"
+  }
 }
