--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Anton Semenov <anta.semenov@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "deploy": "./sls-deploy.sh"
+    "deploy": "sls deploy"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.3",
